--- a/socialnetwork-config-server/src/main/resources/application.properties
+++ b/socialnetwork-config-server/src/main/resources/application.properties
@@ -2,10 +2,12 @@ spring.application.name=config-server
 
 server.port=8888
 
-spring.profiles.active=local
+spring.profiles.active=native
 
-spring.cloud.config.uri=http://localhost:8888
-spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork
-spring.cloud.config.server.git.search-paths=configurations
+spring.cloud.config.server.native.search-locations=classpath:/configurations
+
+#spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork
+#spring.cloud.config.server.git.search-paths=configurations
 
 eureka.client.service-url.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka/
