--- a/socialnetwork-support-service/pom.xml
+++ b/socialnetwork-support-service/pom.xml
@@ -19,7 +19,8 @@
 
 
     <properties>
-        <kotlin.version>1.4.31</kotlin.version>
+        <kotlin.version>1.4.32</kotlin.version>
+        <kotlin.reflect.version>1.4.32</kotlin.reflect.version>
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <spring.boot.web.version>2.3.3.RELEASE</spring.boot.web.version>
         <spring.boot.data.jpa.version>2.3.3.RELEASE</spring.boot.data.jpa.version>
@@ -32,6 +33,11 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+            <version>${kotlin.reflect.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
