--- a/socialnetwork-profile-service/pom.xml
+++ b/socialnetwork-profile-service/pom.xml
@@ -28,6 +28,7 @@
         <springdoc.openapi.ui.version>1.5.2</springdoc.openapi.ui.version>
         <axon.framework.version>4.5</axon.framework.version>
         <google.guava.version>30.1.1-jre</google.guava.version>
+        <projectlombok.version>RELEASE</projectlombok.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -78,6 +79,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${google.guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${projectlombok.version}</version>
         </dependency>
     </dependencies>
     <build>
