--- a/socialnetwork-api-gateway/pom.xml
+++ b/socialnetwork-api-gateway/pom.xml
@@ -24,7 +24,7 @@
         <spring.cloud.commons.version>3.1.3</spring.cloud.commons.version>
         <spring.cloud.gateway.version>3.1.3</spring.cloud.gateway.version>
         <spring.cloud.loadbalancer.version>3.1.3</spring.cloud.loadbalancer.version>
-        <spring.cloud.config.client.version>3.1.3</spring.cloud.config.client.version>
+        <spring.cloud.starter.config.version>3.1.3</spring.cloud.starter.config.version>
         <jackson.version>2.13.3</jackson.version>
         <gson.version>2.9.0</gson.version>
         <maven.compiler.source>14</maven.compiler.source>
@@ -43,11 +43,6 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>${spring.cloud.netflix.eureka.client.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-commons</artifactId>-->
-<!--            <version>${spring.cloud.commons.version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
@@ -60,8 +55,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-client</artifactId>
-            <version>${spring.cloud.config.client.version}</version>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>${spring.cloud.starter.config.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
