--- a/socialnetwork-service-discovery/pom.xml
+++ b/socialnetwork-service-discovery/pom.xml
@@ -21,6 +21,7 @@
         <java.version>14</java.version>
         <spring.boot.version>2.7.0</spring.boot.version>
         <spring.cloud.netflix.eureka.server.version>3.1.3</spring.cloud.netflix.eureka.server.version>
+        <spring.cloud.starter.config.version>3.1.3</spring.cloud.starter.config.version>
         <jackson.version>2.13.3</jackson.version>
         <gson.version>2.9.0</gson.version>
         <maven.compiler.source>14</maven.compiler.source>
@@ -38,6 +39,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
             <version>${spring.cloud.netflix.eureka.server.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>${spring.cloud.starter.config.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
