--- a/socialnetwork-user-service/pom.xml
+++ b/socialnetwork-user-service/pom.xml
@@ -23,7 +23,7 @@
         <spring.boot.web.version>2.7.0</spring.boot.web.version>
         <spring.boot.data.jpa.version>2.7.0</spring.boot.data.jpa.version>
         <spring.cloud.netflix.eureka.client.version>3.1.3</spring.cloud.netflix.eureka.client.version>
-        <spring.cloud.config.client.version>3.1.3</spring.cloud.config.client.version>
+        <spring.cloud.starter.config.version>3.1.3</spring.cloud.starter.config.version>
         <spring.cloud.openfeign.version>3.1.3</spring.cloud.openfeign.version>
         <spring.kafka.version>2.8.5</spring.kafka.version>
         <jackson.version>2.13.3</jackson.version>
@@ -58,8 +58,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-client</artifactId>
-            <version>${spring.cloud.config.client.version}</version>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>${spring.cloud.starter.config.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
