--- a/socialnetwork-rest-api/pom.xml
+++ b/socialnetwork-rest-api/pom.xml
@@ -14,6 +14,7 @@
     <spring.cloud.netflix.eureka.server.version>3.1.4</spring.cloud.netflix.eureka.server.version>
     <spring.cloud.starter.config.version>3.1.4</spring.cloud.starter.config.version>
     <jackson.version>2.13.4</jackson.version>
+    <springdoc.openapi.ui>1.6.11</springdoc.openapi.ui>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
   </properties>
@@ -38,6 +39,11 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.6.11</version>
     </dependency>
   </dependencies>
 </project>
