--- a/socialnetwork-rest-api/pom.xml
+++ b/socialnetwork-rest-api/pom.xml
@@ -13,7 +13,8 @@
     <spring.boot.version>2.7.4</spring.boot.version>
     <spring.cloud.netflix.eureka.server.version>3.1.4</spring.cloud.netflix.eureka.server.version>
     <spring.cloud.starter.config.version>3.1.4</spring.cloud.starter.config.version>
-    <jackson.version>2.13.4</jackson.version>
+    <spring.cloud.starter.openfeign>3.1.4</spring.cloud.starter.openfeign>
+    <jackson.version>2.13.4.1</jackson.version>
     <springdoc.openapi.ui>1.6.11</springdoc.openapi.ui>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
@@ -36,6 +37,11 @@
       <version>${spring.cloud.starter.config.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+      <version>${spring.cloud.starter.openfeign}</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
@@ -44,6 +50,12 @@
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
       <version>1.6.11</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
