--- a/socialnetwork-api-gateway/src/main/resources/application.properties
+++ b/socialnetwork-api-gateway/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.profiles.active=local
 
 # Spring Cloud: Config
 spring.config.import=optional:configserver:http://socialnetwork-config-server:8888
+
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
