--- a/socialnetwork-api-gateway/pom.xml
+++ b/socialnetwork-api-gateway/pom.xml
@@ -20,6 +20,7 @@
     <properties>
         <java.version>14</java.version>
         <spring.boot.version>2.7.3</spring.boot.version>
+        <spring.boot.aop.version>2.7.3</spring.boot.aop.version>
         <spring.cloud.netflix.eureka.client.version>3.1.4</spring.cloud.netflix.eureka.client.version>
         <spring.cloud.commons.version>3.1.3</spring.cloud.commons.version>
         <spring.cloud.gateway.version>3.1.4</spring.cloud.gateway.version>
@@ -27,6 +28,7 @@
         <spring.cloud.starter.config.version>3.1.4</spring.cloud.starter.config.version>
         <jackson.version>2.13.4.1</jackson.version>
         <gson.version>2.9.0</gson.version>
+        <projectlombok.version>1.18.24</projectlombok.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -37,6 +39,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
             <version>${spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>${spring.boot.aop.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -53,6 +60,7 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
             <version>${spring.cloud.loadbalancer.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
@@ -67,6 +75,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${projectlombok.version}</version>
         </dependency>
     </dependencies>
 
