--- a/spring-config/configurations/auth-server-local.properties
+++ b/spring-config/configurations/auth-server-local.properties
@@ -4,12 +4,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 # Spring: PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://socialnetwork-database:5432/sn_user_service_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/sn_user_service_db
 spring.datasource.username=sn_user_service_user
 spring.datasource.password=sn_user_service_password
 
 # Spring Cloud: Eureka Configuration
-eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # Jwt Configuration
 security.jwt.token.secret-key=c1NxnyGc34E87RnTkERjlwmjkD7Yt/r0XrfwnqcS
