--- a/socialnetwork-auth-server/pom.xml
+++ b/socialnetwork-auth-server/pom.xml
@@ -31,6 +31,8 @@
         <gson.version>2.9.0</gson.version>
         <lombok.version>1.18.26</lombok.version>
         <postgresql.version>42.5.4</postgresql.version>
+        <mockito.core.version>5.2.0</mockito.core.version>
+        <mockito.junit-jupiter.version>5.2.0</mockito.junit-jupiter.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -110,6 +112,19 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -127,6 +142,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M9</version>
             </plugin>
         </plugins>
     </build>
