--- a/spring-config/configurations/auth-server-local.properties
+++ b/spring-config/configurations/auth-server-local.properties
@@ -4,9 +4,9 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 # Spring: PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/sn_user_service_db
-spring.datasource.username=sn_user_service_user
-spring.datasource.password=sn_user_service_password
+spring.datasource.url=jdbc:postgresql://localhost:5432/sn_auth_server_db
+spring.datasource.username=sn_auth_server_user
+spring.datasource.password=sn_auth_server_password
 
 # Spring Cloud: Eureka Configuration
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
