--- a/socialnetwork-auth-server/pom.xml
+++ b/socialnetwork-auth-server/pom.xml
@@ -26,6 +26,7 @@
         <spring.cloud.netflix.eureka.client.version>4.0.0</spring.cloud.netflix.eureka.client.version>
         <spring.cloud.config.client.version>4.0.1</spring.cloud.config.client.version>
         <spring.cloud.openfeign.version>4.0.1</spring.cloud.openfeign.version>
+        <spring.cloud.kafka.version>4.0.2</spring.cloud.kafka.version>
         <jjwt.version>0.11.5</jjwt.version>
         <jackson.version>2.13.4.1</jackson.version>
         <gson.version>2.9.0</gson.version>
@@ -73,6 +74,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>${spring.cloud.openfeign.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+            <version>${spring.cloud.kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
