--- a/spring-config/configurations/user-service-local.properties
+++ b/spring-config/configurations/user-service-local.properties
@@ -3,23 +3,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # Spring: PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://socialnetwork-database:5432/sn_user_service_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/sn_user_service_db
 spring.datasource.username=sn_user_service_user
 spring.datasource.password=sn_user_service_password
 
 # Spring Cloud: Eureka Configuration
-eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
-
-# SocialNetwork: User
-sn.user.default.role=USER
-
-# SocialNetwork: Profile
-sn.profile.default.avatar.path=/avatar/default-avatar.jpg
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # SocialNetwork: Kafka
 sn.kafka.server=kafka:9092
 sn.kafka.groupId=user-default-group-id
-
-# SocialNetwork: Kafka Topics
-sn.kafka.producer.topic.profile.new=topic.profile.new
