--- a/spring-config/configurations/profile-service-local.properties
+++ b/spring-config/configurations/profile-service-local.properties
@@ -4,7 +4,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 # Spring: PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://socialnetwork-database:5432/sn_profile_service_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/sn_profile_service_db
 spring.datasource.username=sn_profile_service_user
 spring.datasource.password=sn_profile_service_password
 
@@ -13,7 +13,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Spring Cloud: Eureka Configuration
-eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # SocialNetwork: Profile
 sn.profile.default.avatar.path=/avatar/default-avatar.jpg
@@ -24,5 +24,4 @@ sn.kafka.server=kafka:9092
 sn.kafka.groupId=profile-default-group-id
 
 # SocialNetwork: Kafka Topics
-sn.kafka.topic.user.update=topic.user.update
-sn.kafka.topic.user.delete=topic.user.delete
+sn.kafka.topic.profile.new=topic.profile.new
